Issues with GUI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -146,6 +146,6 @@ if(APPLE)
     install(FILES launcher.command DESTINATION bin)
 endif()
 
-include(./CMakeFiles/PGE.cmake)
-SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -g -std=c++11 -lGL -lglut -lGLU")
-SET( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} -g -std=c++11 -lGL -lglut -lGLU")
+include(./PGE.cmake)
+SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -g -std=c++11 -lGL -lglut -lGLU -lX11") 
+SET( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} -g -std=c++11 -lGL -lglut -lGLU -lX11")
