--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -146,6 +146,6 @@ if(APPLE)
     install(FILES launcher.command DESTINATION bin)
 endif()
 
-#include(./PGE.cmake)
-#SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -g -std=c++11 -lGL -lglut -lGLU -lX11") 
-#SET( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} -g -std=c++11 -lGL -lglut -lGLU -lX11")
+include(./PGE.cmake)
+SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -g -lX11 -lGL -lpthread -lpng -lstdc++fs -std=c++17") 
+SET( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} -g -lX11 -lGL -lpthread -lpng -lstdc++fs -std=c++17") 
