--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -144,8 +144,8 @@ target_link_libraries(${PROJECT_NAME} PRIVATE)
 # install(FILES some_file1.txt some_file2.md DESTINATION bin)
 if(APPLE)
 elseif(UNIX)
-    target_link_libraries(${PROJECT_NAME} PRIVATE X11)
-    SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -g -lGL -lpng") 
+    target_link_libraries(${PROJECT_NAME} PRIVATE X11 GL png)
+    #SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -g -lGL -lpng") 
     #SET( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} -g -lGL -lpng") 
 endif()
 
