--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -226,7 +226,7 @@ jobs:
       - name: Install ninja (Windows)
         if: runner.os == 'Windows'
         run: |
-          choco install ninja libpng
+          choco install ninja
 
       - name: Install valgrind
         if: runner.os == 'Linux' && matrix.runs_valgrind == true
