--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -146,9 +146,9 @@ target_link_libraries(${PROJECT_NAME} PRIVATE Threads::Threads PNG::PNG)
 # install(DIRECTORY some_dir1 some_dir2 DESTINATION bin)
 # install(FILES some_file1.txt some_file2.md DESTINATION bin)
 if(APPLE)
-    target_link_libraries(${PROJECT_NAME} PRIVATE glut GLU GL)
+    target_link_libraries(${PROJECT_NAME} PRIVATE GLU GL)
 elseif(UNIX)
-    target_link_libraries(${PROJECT_NAME} PRIVATE X11 glut GLU GL png)
+    target_link_libraries(${PROJECT_NAME} PRIVATE X11 GL png)
 endif()
 
 install(TARGETS ${PROJECT_NAME} DESTINATION bin)
