--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 option(WARNINGS_AS_ERRORS "Treat warnings as errors" OFF)
+option(USE_ASAN "Use Address Sanitizer" OFF)
+option(USE_MSAN "Use Memory Sanitizer" OFF)
+option(BUILD_SHARED_LIBS "Build as shared library" FALSE)
 
 if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
   set(CMAKE_INSTALL_PREFIX "install_dir" CACHE PATH "..." FORCE)
@@ -146,7 +149,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE Threads::Threads PNG::PNG)
 # install(DIRECTORY some_dir1 some_dir2 DESTINATION bin)
 # install(FILES some_file1.txt some_file2.md DESTINATION bin)
 if(APPLE)
-    target_link_libraries(${PROJECT_NAME} PRIVATE GLU GL)
+    target_link_libraries(${PROJECT_NAME} PRIVATE GL)
 elseif(UNIX)
     target_link_libraries(${PROJECT_NAME} PRIVATE X11 GL png)
 endif()
