--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,17 @@ set(debug_mode "$<OR:${is_debug},${is_rel_with_deb}>")
 ###############################################################################
 
 # custom functions
+function(detect_libcpp)
+    set(OLD_CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS})
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
+    set(TEST_STDLIB_SRC [=[
+    #include <iostream>
+    int main() {}
+    ]=])
+    try_compile(HAS_LIBCPP SOURCE_FROM_CONTENT test_stdlib.cpp ${TEST_STDLIB_SRC})
+    set(CMAKE_CXX_FLAGS ${OLD_CMAKE_CXX_FLAGS})
+    unset(OLD_CMAKE_CXX_FLAGS)
+endfunction()
 
 function(set_custom_stdlib_and_sanitizers target add_apple_asan)
     if(MSVC)
@@ -40,8 +51,16 @@ function(set_custom_stdlib_and_sanitizers target add_apple_asan)
 
     if("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang" AND NOT WIN32)
         # see also https://stackoverflow.com/a/70382484
-        target_compile_options(${target} PRIVATE -stdlib=libc++)
-        target_link_options(${target} PRIVATE -stdlib=libc++)
+        detect_libcpp()
+        if(HAS_LIBCPP)
+            # see also https://stackoverflow.com/a/70382484
+            target_compile_options(${target} PRIVATE -stdlib=libc++)
+            target_link_options(${target} PRIVATE -stdlib=libc++)
+        else()
+            # fall back to libstdc++
+            target_compile_options(${target} PRIVATE -stdlib=libstdc++)
+            target_link_options(${target} PRIVATE -stdlib=libstdc++)
+        endif()
     endif()
 
     if(APPLE)
@@ -149,7 +168,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE Threads::Threads PNG::PNG)
 # install(DIRECTORY some_dir1 some_dir2 DESTINATION bin)
 # install(FILES some_file1.txt some_file2.md DESTINATION bin)
 if(APPLE)
-    target_link_libraries(${PROJECT_NAME} PRIVATE GL)
+    target_link_libraries(${PROJECT_NAME} PRIVATE OpenGL)
 elseif(UNIX)
     target_link_libraries(${PROJECT_NAME} PRIVATE X11 GL png)
 endif()
