--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -168,7 +168,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE Threads::Threads PNG::PNG)
 # install(DIRECTORY some_dir1 some_dir2 DESTINATION bin)
 # install(FILES some_file1.txt some_file2.md DESTINATION bin)
 if(APPLE)
-    target_link_libraries(${PROJECT_NAME} PRIVATE GLEW glfw)
+    target_link_libraries(${PROJECT_NAME} PRIVATE glfw)
 elseif(UNIX)
     target_link_libraries(${PROJECT_NAME} PRIVATE X11 GL png)
 endif()
