--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -136,7 +136,7 @@ add_executable(${PROJECT_NAME} main.cpp
     debug.cpp
     menu.cpp
     simulator.cpp
-    #command.cpp
+    command.cpp
     #sprite.cpp
     generated/src/Helper.cpp)
 
